Criação do primeiro componente - header

--- a/Angular/primeiro-projeto-angular/src/app/app.component.html
+++ b/Angular/primeiro-projeto-angular/src/app/app.component.html
@@ -1,7 +1,6 @@
-<!--   Primeira Lista de Exercícios da School Angular - MJV 
-Exercício 1) Crie um projeto utilizando o cli do angular e que utiliza o padrão SCSS para estilização.
-Exercício 2) No arquivo app.component.html coloque um texto do lorem ipsum: https://www.lipsum.com/ -->
+<!--   Aplicação criada com base nos exercícios propostos nas Aulas da School de Angular oferecida pelo MJV -->
 
+<app-header></app-header>
 <h1>Olá, Mundo!</h1>
 <h2>Este é o meu primeiro projeto em Angular :D</h2>
 
