Criação dos componentes main/content/footer e estilização do header e footer para realização do exercícios proposto na aula de Componentes

--- a/Angular/primeiro-projeto-angular/src/app/shared/components/header/header.component.html
+++ b/Angular/primeiro-projeto-angular/src/app/shared/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<nav class="cabecalho">
+  <ul class="cabecalho__lista">
+    <li>Home</li>
+    <li>Produtos</li>
+    <li>Contatos</li>
+  </ul>
+</nav>
