--- a/Angular/primeiro-projeto-angular/src/app/app.component.html
+++ b/Angular/primeiro-projeto-angular/src/app/app.component.html
@@ -1,26 +1,6 @@
 <!--   Aplicação criada com base nos exercícios propostos nas Aulas da School de Angular oferecida pelo MJV -->
 
 <app-header></app-header>
-<h1>Olá, Mundo!</h1>
-<h2>Este é o meu primeiro projeto em Angular :D</h2>
-
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat iste, quasi
-  reiciendis sit quisquam illum delectus consequatur eligendi. Suscipit, magnam
-  nulla?
-</p>
-
-<p>
-  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, dignissimos
-  atque. Numquam nisi explicabo vero praesentium nostrum facilis voluptates
-  commodi!
-</p>
-
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum debitis,
-  placeat recusandae omnis dolores earum eum voluptatum quos laudantium nemo
-  aspernatur harum voluptatem repellat at ea mollitia quas eius neque
-  perferendis aliquam tenetur. Minima sit temporibus sequi, autem obcaecati
-  ratione numquam ea officiis dolorum iusto, impedit, quisquam natus laboriosam
-  repellendus!
-</p>
+<app-main></app-main>
+<app-content></app-content>
+<app-footer></app-footer>
