Exercícios 5/6/7 do módulo 'Módulos e Data Binding'

--- a/Angular/projeto-angular-gestao-de-colaboradores/src/app/app.component.html
+++ b/Angular/projeto-angular-gestao-de-colaboradores/src/app/app.component.html
@@ -1,2 +1,39 @@
+<!-- Lista de exercícios
+
+Para conseguir realizar a lista de exercícios aguarde a aula para um entendimento melhor, porém se quiser se desafiar a fazer tudo bem :)
+
+Exercício 1) Crie um projeto angular com o ng new para gestão de colaboradores.
+
+Exercício 2) Crie um módulo para services, pipes e components compartilhados e um módulo para feature de colaboradores.
+
+Exercício 3) Com o projeto do exercício anterior, crie 3 componentes, 1 header, 1 footer, 1 componente para listagem dos cadastros de colaboradores. O header e footer serão compartilhados entre a aplicação, então crie na pasta shared>components, já a listagem de colaboradores crie em features/colaboradores.
+
+Exercício 4) Com o projeto do exercício anterior, estilize de forma básica o header e footer.
+
+Exercício 5) No app.component.html utilize nessa ordem: header, listagem, footer.
+
+Exercício 6) No app.component crei uma tag H1 e interpole um título de uma variável criada no typescript.
+
+Exercício 7) No app.component crie uma div e exiba as seguintes informações do objeto do colaborador abaixo:
+
+{ id: 7, nome: 'Nathan Carlos Exercicio', salario: 4500, cargo: 'Dev Pl' }
+
+Obs: para interpolar os valores desse objeto, não esqueça de criar uma vriável no typescript e atribuir o objeto.
+
+
+https://github.com/NathanCarlos/turma-devschool-angular-pt-br/blob/master/modulos-e-data-binding.md#aula-de-m%C3%B3dulos-e-data-binding-angular -->
+
 <app-header></app-header>
+
+<h1>{{ titulo }}</h1>
+
+<app-listagem></app-listagem>
+
+<div>
+  <p>Colaborador: {{ colaborador.nome }}</p>
+  <p>Identificação: {{ colaborador.id }}</p>
+  <p>Salário: {{ colaborador.salario }}</p>
+  <p>Cargo: {{ colaborador.cargo }}</p>
+</div>
+
 <app-footer></app-footer>
