--- a/Angular/projeto-angular-gestao-de-colaboradores/src/app/shared/components/footer/footer.component.html
+++ b/Angular/projeto-angular-gestao-de-colaboradores/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,5 @@
-<div>
-  <p>Desenvolvido por <a href="https://github.com/LaissaSaraiva">@laissasc</a></p>
+<div class="rodape">
+  <p>
+    Desenvolvido por <a href="https://github.com/LaissaSaraiva">@laissasc ♥</a>
+  </p>
 </div>
