--- a/Angular/projeto-angular-gestao-de-colaboradores/src/app/shared/components/header/header.component.html
+++ b/Angular/projeto-angular-gestao-de-colaboradores/src/app/shared/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="cabecalho">
   <ul class="cabecalho__lista">
-    <li class="cabecalho__item">Lista 1</li>
-    <li class="cabecalho__item">Lista 2</li>
-    <li class="cabecalho__item">Lista 3</li>
+    <li class="cabecalho__item"><a href="#">Home</a></li>
+    <li class="cabecalho__item"><a href="#">Colaboradores</a></li>
+    <li class="cabecalho__item"><a href="#">Contato</a></li>
   </ul>
 </div>
